refactor: update for new idea versions

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,26 +2,28 @@
 # -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
 pluginGroup = com.github.kloostermanw.ideacelery
-pluginName = idea-celery
+pluginName = intelli-celery-web-app
 pluginVersion = 0.0.1
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 202
-pluginUntilBuild = 211.*
+pluginSinceBuild = 243
+pluginUntilBuild = 253.*
 
 # Plugin Verifier integration -> https://github.com/JetBrains/gradle-intellij-plugin#plugin-verifier-dsl
 # See https://jb.gg/intellij-platform-builds-list for available build versions.
-pluginVerifierIdeVersions = 2020.2.4, 2020.3.4, 2021.1.1
+pluginVerifierIdeVersions = 2024.3.1, 2024.3.2, 2024.3.3
 
 platformType = IU
-platformVersion = 2020.2.4
+platformVersion = 2024.3.3
 platformDownloadSources = true
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = IntelliLang,com.jetbrains.php:202.7660.42
+platformPlugins = com.jetbrains.php
 
 # Opt-out flag for bundling Kotlin standard library.
 # See https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library for details.
 kotlin.stdlib.default.dependency = false
+
+org.gradle.java.home=/Users/wiebe/Applications/IntelliJ IDEA.app/Contents/jbr/Contents/Home
